fix: change broken styles on phones

--- a/src/index.css
+++ b/src/index.css
@@ -61,7 +61,11 @@ body {
   background-color: var(--color-green-dark);
   flex: auto;
   text-align: center;
-  padding: 7px 0;
+  width: 125px;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .NavigationElement--active {
@@ -291,14 +295,26 @@ body {
   .Choices {
     width: 100%;
     margin-bottom: 40px;
+    margin-right: 0;
   }
   .CurrentBird {
     width: 100%;
     margin-left: 0;
+    box-sizing: border-box;
   }
   .CurrentBird-row {
     flex-direction: column;
     align-items: center;
+  }
+  .CurrentBird-logo {
+    margin-right: 0;
+    margin-bottom: 25px;
+  }
+  .CurrentBird-name {
+    text-align: center;
+  }
+  .CurrentBird-latin-name {
+    text-align: center;
   }
   .GameOver-heading {
     font-size: 32px;
